examples/test/testpolicy5795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5795
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key42: value15
      key37: value4
      key43: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value23
          key15: value5
      podSelector:
        matchLabels:
          key8: value0
          key7: value43
